# torch-fsdd

./: .readthedocs.yml  README.md  pyproject.toml  setup.py
.circleci/: config.yml
docs/: README.md  conf.py
notebooks/: demo.ipynb
src/test/: test_dataset.py  test_helpers.py
src/torchfsdd/: __init__.py
